--- a/init.bullhead.nanohub.rc
+++ b/init.bullhead.nanohub.rc
@@ -3,13 +3,13 @@ on post-fs
     chown root system /persist/sensorcal.json
     chmod 0640 /persist/sensorcal.json
     ## Update Nanohub FW if needed
-    start flash-nanohub-fw
+    start vendor.flash-nanohub-fw
 
 on post-fs-data
     mkdir /data/vendor/sensor
     chown root system /data/vendor/sensor
     chmod 0770 /data/vendor/sensor
 
-service flash-nanohub-fw /vendor/bin/nanoapp_cmd download
+service vendor.flash-nanohub-fw /vendor/bin/nanoapp_cmd download
     oneshot
     disabled
